@@ -1,7 +1,7 @@
 <HTML>
 <HEAD>
 <TITLE>annotate - Methods to Annotate an Image</TITLE>
-<LINK REV="made" HREF="mailto:ActivePerl@ActiveState.com">
+<LINK REV="made" HREF="mailto:bhcompile@stripples.devel.redhat.com">
 </HEAD>
 
 <body bgcolor="#FFFFFF" text="#000000" link="#1F00FF" alink="#FF0000"  vlink="#9900DD">
